--- a/sass/info.scss
+++ b/sass/info.scss
@@ -64,12 +64,26 @@ p {
   border: 1px solid transparent;
   border-radius: 3px;
   cursor: pointer;
+  border-radius: 20px;
 }
 .button:hover {
   background: linear-gradient(94.54deg, #FF994F 0%, #E23B8C 100%)
 }
 
-
+.text-button {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 160px;
+  height: 40px;
+  border: 2px solid #172026;
+  border-radius: 20px;
+  color: #172026;
+}
+.text-button:hover {
+  color: white;
+  background-color: #172026;
+}
 
 .content {
   max-width: 1280px;
@@ -98,12 +112,12 @@ p {
   min-height: 1000px;
   display: flex;
   align-items: center;
-  justify-content: center;
+  justify-content: flex-start;
+  background: url('../image/plantform.svg') 100% 270px no-repeat;
   .left {
     width: 100%;
     height: 100%;
-    max-width: 900px;
-    text-align: left;
+    max-width: 710px;
     h1 {
       font-weight: bold;
       font-size: 100px;
@@ -112,13 +126,22 @@ p {
       background: url('../image/icon.svg') 100% 0 no-repeat;
     }
     h2 {
+      text-transform: uppercase;
+      font-weight: 900;
+      font-size: 64px;
+      line-height: 64px;
+      margin-bottom: 20px;
+    }
+    h3 {
+      text-transform: uppercase;
+      font-weight: 900;
       font-size: 40px;
-      line-height: 29px;
-      margin-bottom: 25px;
-      margin-bottom: 40px;
+      line-height: 48px;
+      margin-bottom: 30px;
     }
     p {
-      margin: 0 auto 60px auto;
+      max-width: 640px;
+      margin-bottom: 54px;
     }
     .button {
       display: flex;
@@ -140,6 +163,361 @@ p {
       height: 100%;
       background: url('../image/polka.gif') 0 0 no-repeat;
     }
+  }
+}
+
+#features {
+  background: url('../image/back-features.jpg') center top no-repeat;
+}
+.section-features {
+  padding-top: 210px;
+  h2 {
+    text-transform: uppercase;
+    font-weight: 900;
+    font-size: 40px;
+    line-height: 40px;
+    margin-bottom: 40px;
+  }
+  p {
+    width: 100%;
+    max-width: 800px;
+    font-size: 16px;
+    line-height: 26px;
+  }
+
+  .control {
+    display: flex;
+    align-items: center;
+    justify-content: flex-start;
+    margin-top: 40px;
+    margin-bottom: 60px;
+    li {
+      width: 62px;
+      height: 62px;
+      border-radius: 50%;
+      background: rgba(255, 255, 255, 0.05) url() center center no-repeat;
+      cursor: pointer;
+      margin-right: 20px;
+    }
+    li.left-control {
+      background-image: url('../image/arr-left.svg');
+    }
+    li.right-control {
+      background-image: url('../image/arr-right.svg');
+    }
+    li.left-control.enable {
+      background-image: url('../image/arr-left-hover.svg');
+    }
+    li.right-control.enable {
+      background-image: url('../image/arr-right-hover.svg');
+    }
+  }
+
+  .feature-content {
+    margin-top: 290px;
+    display: flex;
+    align-items: stretch;
+    justify-content: flex-start;
+    overflow: hidden;
+
+    .feature-item {
+      width: 275px;
+      height: 320px;
+      border-radius: 10px;
+      margin-right: 20px;
+      padding: 140px 20px;
+      background: #000 url('') 20px 40px no-repeat;
+      flex: 0 0 auto;
+
+      dt {
+        color: white;
+        font-weight: bold;
+        font-size: 24px;
+        line-height: 29px;
+        margin-bottom: 30px;
+      }
+      dd {
+        color: rgba(255, 255, 255, 0.5);
+        font-size: 16px;
+        line-height: 24px;
+      }
+    }
+    .feature-item:nth-child(1n) {
+      background-image: url('../image/list-1.svg');
+    }
+    .feature-item:nth-child(2n) {
+      background-image: url('../image/list-2.svg');
+    }
+    .feature-item:nth-child(3n) {
+      background-image: url('../image/list-3.svg');
+    }
+    .feature-item:nth-child(4n) {
+      background-image: url('../image/list-4.svg');
+    }
+    .feature-item:nth-child(5n) {
+      background-image: url('../image/list-5.svg');
+    }
+    .feature-item:nth-child(6n) {
+      background-image: url('../image/list-6.svg');
+    }
+  }
+}
+
+.section-product {
+  color: #172026;
+  padding-top: 170px;
+  padding-bottom: 150px;
+  .content {
+    background: url('../image/back-token-1.svg') center right no-repeat;
+  }
+  h2 {
+    font-weight: 900;
+    font-size: 40px;
+    line-height: 40px;
+    margin-bottom: 60px;
+  }
+  ul {
+    font-weight: normal;
+    font-size: 16px;
+    line-height: 16px;
+    li {
+      max-width: 720px;
+      margin-bottom: 30px;
+      padding-left: 32px;
+      background: url('../image/arrows.svg') 0 5px no-repeat;
+    }
+  }
+}
+
+.token-top {
+  width: 100%;
+  height: 94px;
+  background-color: white;
+  position: relative;
+  .content {
+    height: 100%;
+    background: url('../image/back-gray-top.svg') right 0 no-repeat;
+  }
+}
+.token-top:before {
+  content: '';
+  position: absolute;
+  width: 50%;
+  height: 100%;
+  top: 0;
+  right: 0;
+  background-color: #fafafa;
+  
+}
+.token-bottom {
+  width: 100%;
+  height: 94px;
+  background-color: #fafafa;
+  position: relative;
+  .content {
+    height: 100%;
+    background: url('../image/back-gray-bottom.svg') right 0 no-repeat;
+  }
+}
+.token-bottom:after {
+  content: ' ';
+  position: absolute;
+  width: 50%;
+  height: 100%;
+  top: 0;
+  right: 0;
+  background-color: white;
+}
+
+.section-token {
+  padding-top: 90px;
+  padding-bottom: 60px;
+  .content {
+    background: url('../image/back-token-2.svg') center left no-repeat;
+    padding-left: 670px;
+  }
+  h2 {
+    margin-bottom: 40px;
+  }
+  ul {
+    margin-bottom: 60px;
+  }
+  li {
+    padding-bottom: 40px;
+    padding-left: 20px;
+    position: relative;
+  }
+  li:before {
+    content: ' ';
+    position: absolute;
+    width: 7px;
+    height: 7px;
+    border-radius: 50%;
+    top: 4px;
+    left: -3px;
+    background-color: black;
+  }
+  li:after {
+    content: ' ';
+    width: 1px;
+    height: 100%;
+    background-color: black;
+    position: absolute;
+    top: 4px;
+    left: 0px;
+  }
+  li:last-child:after {
+    display: none;
+  }
+}
+
+.section-why {
+
+  .content {
+    padding-top: 190px;
+    background: url('../image/back-arch.svg') center right no-repeat;
+  }
+  h2 {
+    margin-bottom: 60px;
+    font-weight: 900;
+    font-size: 40px;
+    line-height: 40px;
+    margin-bottom: 60px;
+    max-width: 320px;
+  }
+  dl {
+    margin-bottom: 30px; 
+    padding-left: 40px;
+    background: url('') 0 0 no-repeat;
+  }
+  dt {
+    font-size: 16px;
+    line-height: 16px;
+    color: #000;
+    margin-bottom: 10px;
+  }
+  dd {
+    font-size: 14px;
+    line-height: 14px;
+    color: rgba(0, 0, 0, 0.5);
+  }
+  dl:nth-of-type(1) {
+    background-image: url('../image/arch-1.svg');
+  }
+  dl:nth-of-type(2) {
+    background-image: url('../image/arch-2.svg');
+  }
+  dl:nth-of-type(3) {
+    background-image: url('../image/arch-3.svg');
+  }
+  dl:nth-of-type(4) {
+    background-image: url('../image/arch-4.svg');
+  }
+  dl:nth-of-type(5) {
+    background-image: url('../image/arch-5.svg');
+  }
+}
+
+#ecosystem {
+  padding-top: 100px;
+}
+.section-ecosystem {
+  color: white;
+  background: linear-gradient(104.89deg, #ED4454 19.79%, #FB822A 100%);
+  padding: 60px 0;
+  h2 {
+    text-transform: uppercase;
+    text-align: center;
+    margin-bottom: 40px;
+  }
+  .ecosystem {
+    display: flex;
+    align-items: stretch;
+    flex-wrap: wrap;
+  }
+  li  a{
+    display: block;
+    width: 200px;
+    height: 80px;
+    background: url('') center center no-repeat;
+  }
+  li.logo-bithumb a {
+    background-image: url('../image/partners/bithumb-white.svg');
+  }
+  li.logo-bithumb a:hover {
+    background-image: url('../image/partners/bithumb-hover.svg');
+  }
+  li.logo-polkadot a {
+    background-image: url('../image/partners/polkadot-white.svg');
+  }
+  li.logo-polkadot a:hover {
+    background-image: url('../image/partners/polkadot-hover.svg');
+  }
+  li.logo-web3 a {
+    background-image: url('../image/partners/web3-white.svg');
+  }
+  li.logo-web3 a:hover {
+    background-image: url('../image/partners/web3-hover.svg');
+  }
+  li.logo-parity a {
+    background-image: url('../image/partners/parity-white.svg');
+  }
+  li.logo-parity a:hover {
+    background-image: url('../image/partners/parity-hover.svg')
+  }
+  li.logo-crust a {
+    background-image: url('../image/partners/crust-white.svg');
+  }
+  li.logo-crust a:hover {
+    background-image: url('../image/partners/crust-hover.svg');
+  }
+  li.logo-bifrost a {
+    background-image: url('../image/partners/bifrost-white.svg')
+  }
+  li.logo-bifrost a:hover {
+    background-image: url('../image/partners/bifrost-hover.svg')
+  }
+  li.logo-stafi a {
+    background-image: url('../image/partners/stafi-white.svg');
+  }
+  li.logo-stafi a:hover {
+    background-image: url('../image/partners/stafi-hover.svg');
+  }
+  li.logo-kusama a{
+    background-image: url('../image/partners/kusama-white.svg'); 
+  }
+  li.logo-kusama a:hover {
+    background-image: url('../image/partners/kusama-hover.svg');
+  }
+  li.logo-plasm a {
+    background-image: url('../image/partners/plasm-white.svg');
+  }
+  li.logo-plasm a:hover {
+    background-image: url('../image/partners/plasm-hover.svg');
+  }
+  li.logo-chainx a {
+    background-image: url('../image/partners/chainx-white.svg');
+  }
+  li.logo-chainx a:hover {
+    background-image: url('../image/partners/chainx-hover.svg');
+  }
+  li.logo-acala a {
+    background-image: url('../image/partners/acala-white.svg');
+  }
+  li.logo-acala a:hover {
+    background-image: url('../image/partners/acala-hover.svg');
+  }
+  li.logo-substrate a {
+    background-image: url('../image/partners/substrate-white.svg');
+  }
+  li.logo-substrate a:hover {
+    background-image: url('../image/partners/substrate-hover.svg');
+  }
+  li.logo-phala a{
+    background-image: url('../image/partners/phala-white.svg');
+  }
+  li.logo-phala a:hover {
+    background-image: url('../image/partners/phala-hover.svg')
   }
 }
 
@@ -345,13 +723,15 @@ p {
   background:#172026 url('../image/back-logo.svg') center 200px no-repeat;
 }
 .section-roadmap {
-  padding: 370px 0 200px 0;
+  padding: 140px 0 200px 0;
   h2 {
-    text-align: center;
+    text-align: left;
     margin-bottom: 0;
+    text-transform: uppercase;
   }
   .roadmap {
     overflow: hidden;
+    margin-left: -20px;
   }
   .control {
     display: flex;
@@ -382,21 +762,23 @@ p {
   .road-item {
     display: flex;
     white-space: nowrap;
+    padding: 20px;
   }
   dl {
     width: 240px;
     height: 300px;
     margin-right: 20px;
     padding: 20px;
-    background-color: #1F2B32;
+    box-shadow: 0px 4px 20px rgba(0, 0, 0, 0.05);
     border-radius: 10px;
     flex: 0 0 auto;
   }
   dt {
+    color: #000;
     font-size: 20px;
     font-weight: bold;
     padding-bottom: 22px;
-    border-bottom: 1px solid rgba(255, 255, 255, 0.1);
+    border-bottom: 1px solid rgba(0, 0, 0, 0.05);
     padding-left: 44px;
     background: url('../image/back-path.svg') 0 0 no-repeat;
     margin-bottom: 40px;
@@ -405,12 +787,39 @@ p {
     margin-bottom: 20px;
     font-size: 16px;
     line-height: 24px;
-    color: rgba(255, 255, 255, 0.5);
+    color: rgba(0, 0, 0, 0.5);
     text-align: center;
   }
   dd.type {
-    color: white;
+    max-width: 210px;
+    font-weight: 500;
+    font-size: 20px;
+    line-height: 24px;
+    color: #000;
     margin-bottom: 30px;
+  }
+}
+
+.section-news {
+  color: white;
+  padding-top: 140px;
+  padding-bottom: 160px;
+  .column {
+    display: flex;
+    justify-content: space-between;
+  }
+  .left, .right {
+    width: 50%;
+  }
+  h2 {
+    font-weight: 900;
+    font-size: 40px;
+    line-height: 40px;
+    margin-bottom: 40px;
+  }
+  p {
+    font-size: 16px;
+    line-height: 26px;
   }
 }
 
