--- a/style/common.css
+++ b/style/common.css
@@ -25,6 +25,10 @@ body {
   background: url("../image/logo-text.svg") center center no-repeat;
 }
 
+.hide {
+  display: none;
+}
+
 .head {
   width: 100%;
   margin: 0 auto;
@@ -104,18 +108,18 @@ body {
   margin-bottom: 36px;
 }
 
-.nav {
+.nav, .section-nav {
   display: flex;
   align-items: center;
   justify-content: center;
 }
-.nav li {
+.nav li, .section-nav li {
   margin-left: 35px;
   font-size: 14px;
   line-height: 17px;
   border-bottom: 2px solid transparent;
 }
-.nav li:hover {
+.nav li:hover, .section-nav li:hover {
   border-bottom-color: #F5663D;
 }
 
@@ -350,11 +354,11 @@ body {
   opacity: 1;
 }
 
-.section-main h1 {
+.section-main h2 {
   animation: an-1 0.7s linear;
 }
 
-.section-main h2 {
+.section-main h3 {
   animation: an-2 0.8s linear;
 }
 
