--- a/style/common.css
+++ b/style/common.css
@@ -172,13 +172,10 @@ body {
   font-size: 14px;
   line-height: 17px;
   text-align: center;
-  padding-left: 200px;
   height: auto !important;
-  background: url("../image/logo-text-white.svg") 0 0 no-repeat;
 }
 .footer .left a {
   padding-right: 20px;
-  border-right: 1px solid rgba(255, 255, 255, 0.5);
   margin-right: 17px;
   line-height: 14px;
 }
@@ -226,7 +223,13 @@ body {
   display: flex;
   align-items: center;
   justify-content: space-around;
-  margin-top: 100px;
+  position: absolute;
+  width: 100%;
+  bottom: 100px;
+}
+.side-social img {
+  width: 35px;
+  height: 35px;
 }
 
 @media only screen and (max-width: 1280px) {
@@ -253,7 +256,7 @@ body {
     display: block;
   }
 
-  .nav {
+  .nav, .section-nav {
     display: none !important;
   }
 
